{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 46,
  "lineage": "f5896d90-d00b-7a0b-e396-21b913b4b427",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:017569339905:listener/app/tf-lb-20210207172525112600000003/bc9a46606da505fb/9315962b2f3d08f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:017569339905:targetgroup/tf-20210207172521054200000001/010f19ef36ffc7f4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:017569339905:listener/app/tf-lb-20210207172525112600000003/bc9a46606da505fb/9315962b2f3d08f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:017569339905:loadbalancer/app/tf-lb-20210207172525112600000003/bc9a46606da505fb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public_alb",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.private_security_group",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017569339905:internet-gateway/igw-0368bd6d524e570fa",
            "id": "igw-0368bd6d524e570fa",
            "owner_id": "017569339905",
            "tags": {
              "Name": "us-east-gw"
            },
            "vpc_id": "vpc-06e340f2622c366af"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:017569339905:loadbalancer/app/tf-lb-20210207172525112600000003/bc9a46606da505fb",
            "arn_suffix": "app/tf-lb-20210207172525112600000003/bc9a46606da505fb",
            "dns_name": "tf-lb-20210207172525112600000003-215033740.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:017569339905:loadbalancer/app/tf-lb-20210207172525112600000003/bc9a46606da505fb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20210207172525112600000003",
            "security_groups": [
              "sg-0bb2ad84689596918"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c4f4954d5daa36f2"
              },
              {
                "subnet_id": "subnet-0cf0de3a6e54d51b1"
              }
            ],
            "subnets": [
              "subnet-0c4f4954d5daa36f2",
              "subnet-0cf0de3a6e54d51b1"
            ],
            "tags": {
              "Name": "us-east-public-alb"
            },
            "vpc_id": "vpc-06e340f2622c366af",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.private_security_group",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:017569339905:targetgroup/tf-20210207172521054200000001/010f19ef36ffc7f4",
            "arn_suffix": "targetgroup/tf-20210207172521054200000001/010f19ef36ffc7f4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:017569339905:targetgroup/tf-20210207172521054200000001/010f19ef36ffc7f4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20210207172521054200000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06e340f2622c366af"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f3b453dbc562e517",
            "owner_id": "017569339905",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0368bd6d524e570fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-private-rt"
            },
            "vpc_id": "vpc-06e340f2622c366af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047510616ef49662a",
            "route_table_id": "rtb-0f3b453dbc562e517",
            "subnet_id": "subnet-0c4f4954d5daa36f2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ed73902bed9803d",
            "route_table_id": "rtb-0f3b453dbc562e517",
            "subnet_id": "subnet-0cf0de3a6e54d51b1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017569339905:security-group/sg-0bb2ad84689596918",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bb2ad84689596918",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210207172521055200000002",
            "name_prefix": "terraform-",
            "owner_id": "017569339905",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e340f2622c366af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017569339905:subnet/subnet-0c4f4954d5daa36f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c4f4954d5daa36f2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "017569339905",
            "tags": {
              "Name": "us-east-private-subnet-1"
            },
            "vpc_id": "vpc-06e340f2622c366af"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017569339905:subnet/subnet-0cf0de3a6e54d51b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cf0de3a6e54d51b1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "017569339905",
            "tags": {
              "Name": "us-east-private-subnet-2"
            },
            "vpc_id": "vpc-06e340f2622c366af"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:017569339905:vpc/vpc-06e340f2622c366af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1eeae42c4430f82",
            "default_route_table_id": "rtb-0b028dcfbab0703fb",
            "default_security_group_id": "sg-0699ae47559fcb532",
            "dhcp_options_id": "dopt-0987f08036a840136",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06e340f2622c366af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b028dcfbab0703fb",
            "owner_id": "017569339905",
            "tags": {
              "Name": "us-east-vpc"
            }
          }
        }
      ]
    }
  ]
}